[package]
name = "palettebot"
version = "0.1.0"
authors = ["Andra Antariksa <andra.antariksa@gmail.com>"]
edition = "2018"

[lib]
name = "palettebot_lib"
path = "src/lib.rs"

[[bin]]
name = "palettebot"
path = "src/main.rs"

[dependencies]
image = { version = "0.23.13", features = ["png"] }
imageproc = "0.18.0"
rand = "0.6.5"
#surf = "2.1.0"
dotenv = "0.15.0"
serde_json = "1.0"
serde = { version = "1.0.123", features = ["derive"] }
#async-std = { version = "1.9.0", features = ["attributes"] }
async-trait = "0.1.42"
reqwest = { version = "0.11", features = ["json", "multipart"] }
tokio = { version = "1", features = ["full"] }
